--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
       // Get token from URL hash
     const hashParams = new URLSearchParams(window.location.hash.substring(1));
+    const token = hashParams.get("token_hash");
       const access_token = hashParams.get('access_token');
       const refresh_token = hashParams.get('refresh_token');
 
@@ -41,7 +42,7 @@
         method: 'POST',
         headers: { 
           'Content-Type': 'application/json',
-          "Authorization": `Bearer ${access_token}`
+          // "Authorization": `Bearer ${access_token}`
           },
         body: JSON.stringify({ newPassword }),
       })
