--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 
       // Get token from URL hash
       const hashParams = new URLSearchParams(window.location.hash.substring(1));
-      const token = hashParams.get('token_hash');
+      // const token = hashParams.get('token_hash');
       const access_token = hashParams.get('access_token');
       const refresh_token = hashParams.get('refresh_token');
 
       console.log(token)
-      console.log("re:", refresh_token)
 
       if (!access_token || !refresh_token) {
         alert("Missing auth tokens");
