--- a/index.html
+++ b/index.html
@@ -13,45 +13,40 @@
   </form>
   <p id="message"></p>
 
-  <script type="module">
-    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+ <script type="module">
+  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-    const supabase = createClient('https://vjupksldndgsditqhirh.supabase.co', 
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZqdXBrc2xkbmRnc2RpdHFoaXJoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTAyOTE5ODUsImV4cCI6MjA2NTg2Nzk4NX0.DM6osavzEdtvsnX5VOhbLoI9cr1OsN6HD_vB_fVPSVs');
+  const supabase = createClient(
+    'https://vjupksldndgsditqhirh.supabase.co',
+    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZqdXBrc2xkbmRnc2RpdHFoaXJoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTAyOTE5ODUsImV4cCI6MjA2NTg2Nzk4NX0.DM6osavzEdtvsnX5VOhbLoI9cr1OsN6HD_vB_fVPSVs'
+  );
 
-    // Parse tokens from URL hash
-    // const { access_token, refresh_token } = Object.fromEntries(new URLSearchParams(location.hash.slice(1)));
-
-    // Set the session so the user is logged in
-
+  window.addEventListener("DOMContentLoaded", async () => {
     const hashParams = new URLSearchParams(window.location.hash.substring(1));
     const access_token = hashParams.get('access_token');
     const refresh_token = hashParams.get('refresh_token');
 
     if (!access_token || !refresh_token) {
       alert("Missing auth tokens");
+      return;
     }
 
+    // Set the Supabase session (wait for it)
     const { data, error } = await supabase.auth.setSession({ access_token, refresh_token });
     if (error) {
       console.error('Error setting session:', error);
       alert('Failed to set session');
+      return;
     }
 
+    console.log('Session successfully set:', data);
+
+    // Register form submit listener
     const form = document.getElementById("reset-form");
-    const message = document.getElementById("message");
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const newPassword = document.getElementById("new-password").value;
-
-
-
-      console.log("Full URL:", window.location.href);
-      console.log("Hash:", window.location.hash);
-
-      console.log("Access Token:", hashParams.get('access_token'));
-      console.log("Refresh Token:", hashParams.get('refresh_token'));
 
       try {
         const res = await fetch('https://vjupksldndgsditqhirh.supabase.co/functions/v1/update-password', {
@@ -77,6 +72,8 @@
         alert('Unexpected error occurred');
       }
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
